--- a/templates/default/heka/hekad.toml.erb
+++ b/templates/default/heka/hekad.toml.erb
@@ -1,5 +1,6 @@
-# Configured by Chef.
+# Configured by Chef
 # Changes will be overwritten!
+
 [hekad]
 <% @config.each_pair do |p,v| %>
 <%= "#{p} = #{v}" %>
